Fixed the alignment problem

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,15 @@
   padding: 10px auto;
 }
 
+.right {
+    /* padding: 15px auto 15px auto; */
+      padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 22%;
+    padding-right: 2rem;
+    text-decoration: none;
+  } 
+  
 .left {
   width: 20%;
   height: 100vh;
@@ -47,26 +56,6 @@ h2 {
   overflow: scroll;
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
-}
-
 ul {
   text-decoration: none;
   height: 100vh;
@@ -78,6 +67,27 @@ ul {
   padding-bottom: 12px;
   padding-left: 30px;
 }
+
+.right p{
+    text-indent: 3%;
+}
+
+.right ul li{
+    text-indent: 3%;
+}
+.right ul ul li{
+text-indent: 6%;
+}
+
+p.none {
+    border-style: none;
+    background-color: #e4dada;
+    padding-left: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    letter-spacing: 1px;
+  }
+  
 
 a:link {
   color: rgb(0, 0, 8);
@@ -96,6 +106,11 @@ a:active {
 }
 
 /*  */
+/*.right h2 li a:link{
+    color: rgb(89, 89, 209);
+    text-decoration: underline;
+    font-size: medium;
+}*/
 
 /* 
 .split {
@@ -112,14 +127,6 @@ a:active {
   text-decoration: none;
 } */
 
-/* .right {
-  /* padding: 15px auto 15px auto; */
-/* padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 2rem;
-  padding-right: 2rem;
-  text-decoration: none;
-} */
 
 /* ul {
   list-style-type: none;
@@ -136,13 +143,5 @@ a:active {
   display: none;
 } */
 
-/* p.none {
-  border-style: none;
-  background-color: #f7f7f7;
-  padding-left: 2%;
-  padding-top: 1%;
-  padding-bottom: 1%;
-  letter-spacing: 1px;
-}
 
-*/
+
